# RLPlasticityLab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  RELEASE_CHECKLIST.md  RELEASE_REPORT_v0.1.0.md  REPORT_SCHEMA.md  ROADMAP.md  TROUBLESHOOTING.md  VALIDATION.md  _config.yml  index.md
docs/assets/: README.md
docs/showcase/: frozen_encoder_plasticity_probe.json  healthy_forward_probe.html  healthy_forward_probe.json  healthy_forward_probe.txt  healthy_plasticity_probe.html  healthy_plasticity_probe.json  healthy_plasticity_probe.txt  healthy_static_scan.html  healthy_static_scan.json  healthy_static_scan.txt  showcase_summary.json
docs/validation/: README.md  checkpoint_sequence.html  checkpoint_sequence.json  checkpoint_sequence.txt  frozen_encoder.html  frozen_encoder.json  frozen_encoder.txt  frozen_policy_head.html  frozen_policy_head.json  frozen_policy_head.txt  frozen_trunk.html  frozen_trunk.json  frozen_trunk.txt  global_stall.html  global_stall.json  global_stall.txt  healthy.html  healthy.json  healthy.txt  summary.json
examples/: __init__.py  checkpoint_scan.py  dqn_like_case.py  minimal_torch_integration.py  ppo_like_case.py  rl_actor_case.py  sac_like_case.py  showcase_reports.py  validation_suite.py
src/rlplasticity/: __init__.py  (+2 more)
tests/: test_release_workflows.py  test_robustness_and_ux.py  test_torch_integration.py
(+36 files in other folders)
