[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlplasticity"
version = "0.1.0"
description = "Plasticity diagnostics toolkit for reinforcement learning workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RLPlasticityLab" }]
dependencies = []
keywords = ["reinforcement-learning", "plasticity", "diagnostics", "pytorch", "analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
rlplasticity = "rlplasticity.cli:main"

[project.optional-dependencies]
torch = ["torch>=2.2", "numpy>=2.0"]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
